force-app/main/default/objects/VisMed_AccionPorCuenta__c/VisMed_AccionPorCuenta__c.object-meta.xml
<CustomObject>
    <description>Objeto que contendrá las acciones correspondientes a un objetivo, relacionadas a un profesional o Institución.</description>
    <label>Acción por cuenta</label>
    <nameField>
        <displayFormat>AccXObj-{0000}</displayFormat>
        <label>Nombre de Acción por profesional</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acciones por cuenta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>