force-app/main/default/objects/VisMed_AccionPorCuenta__c/fields/VisMed_Accion__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Accion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acción</label>
    <referenceTo>VisMed_Accion__c</referenceTo>
    <relationshipLabel>Acciones por cuenta</relationshipLabel>
    <relationshipName>Acciones_por_cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>