force-app/main/default/objects/VisMed_AccionPorCuenta__c/fields/VisMed_APM__c.field-meta.xml
<CustomField>
    <fullName>VisMed_APM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Acciones_por_cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>