force-app/main/default/objects/VisMed_AccionPorCuenta__c/fields/VisMed_APMContacto__c.field-meta.xml
<CustomField>
    <fullName>VisMed_APMContacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APM</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Acciones por cuenta</relationshipLabel>
    <relationshipName>Acciones_Por_Cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>