force-app/main/default/objects/VisMed_AccionPorCuenta__c/fields/VisMed_ObjetivoPorCuenta__c.field-meta.xml
<CustomField>
    <fullName>VisMed_ObjetivoPorCuenta__c</fullName>
    <label>Objetivo por cuenta</label>
    <referenceTo>VisMed_ObjetivoPorCuenta__c</referenceTo>
    <relationshipLabel>Acciones por cuenta</relationshipLabel>
    <relationshipName>Acciones_por_cuenta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>