force-app/main/default/objects/VisMed_AccionPorCuenta__c/fields/VisMed_PromedioAvance__c.field-meta.xml
<CustomField>
    <fullName>VisMed_PromedioAvance__c</fullName>
    <label>Promedio de avance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>